refactor: upload url naming
